月の並び順選択機能とリセットボタンを追加
- 一年間モードに月の並び順（昇順/降順）セレクタを追加
- OCRサービスに月の進行方向ロジックを実装（_prev_month追加）
- 処理完了後のリセットボタンを実装（リロード不要で連続使用可能）
- ベージュ/アイボリーの配色を適用
- 月オフセットバグを修正（10月データが正しく10月に入るように）

--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ paddlepaddle==2.6.2
 numpy==1.26.4
 azure-ai-formrecognizer==3.3.3
 python-dotenv==1.0.1
+fastapi==0.115.0
+uvicorn[standard]==0.32.0
+python-multipart==0.0.12
+aiofiles==24.1.0
